Add section6_vectors project and Embeddings functionality; update FunctionCall to streamline chat client initialization

--- a/src/section5_llms/TextCompletion_Ollama/TextCompletion_Ollama.csproj
+++ b/src/section5_llms/TextCompletion_Ollama/TextCompletion_Ollama.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>64c228cd-7309-488a-918b-a303fc6b215d</UserSecretsId>
   </PropertyGroup>
 
 
